correct button spacing and corners

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,8 @@ body {
 button {
     background-color: #3882F6;
     color: white;
+    padding: 12px 35px;
+    border-radius: 15px;
 }
 
 /* Hero Block 1 ---------*/
@@ -56,11 +58,13 @@ a {
 font-size: 48px;
 color: #F9FAF8;
 font-weight: bolder;
+margin: 10px 0;
 }
 
 .secondtext {
     color: #E5E7EB;
-    font-size: 18px
+    font-size: 18px;
+    margin: 10px 0;
 }
 
 .hero img {
